Samples/ApigeeManagementApis/nohup.out
graphql server For Apigee Management API's By Shawky Foda is ready at http://localhost:4000/
detail_name : {"baseURL":"https://apigee-prd-ms.moj.gov.sa:8443/v1","Authorization":"Basic YXBpZ2VlQG1vai5nb3Yuc2E6TW9qQHBybyMyMDE5","org_name":"moj-prod"}
detail_name : {"baseURL":"https://apigee-prd-ms.moj.gov.sa:8443/v1","Authorization":"Basic YXBpZ2VlQG1vai5nb3Yuc2E6TW9qQHBybyMyMDE5","org_name":"moj-prod"}
graphql server For Apigee Management API's By Shawky Foda is ready at http://localhost:4000/
graphql server For Apigee Management API's By Shawky Foda is ready at http://localhost:4000/
detail_name : {"baseURL":"https://apigee-prd-ms.moj.gov.sa:8443/v1","Authorization":"Basic YXBpZ2VlQG1vai5nb3Yuc2E6TW9qQHBybyMyMDE5","org_name":"moj-prod"}
graphql server For Apigee Management API's By Shawky Foda is ready at http://localhost:4000/
detail_name : {"baseURL":"https://apigee-prd-ms.moj.gov.sa:8443/v1","Authorization":"Basic YXBpZ2VlQG1vai5nb3Yuc2E6TW9qQHBybyMyMDE5","org_name":"moj-prod"}
events.js:174
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::4000
    at Server.setupListenHandle [as _listen2] (net.js:1280:14)
    at listenInCluster (net.js:1328:12)
    at Server.listen (net.js:1415:7)
    at resolve (/etc/graphQL/Samples/API-Wrapper/ApigeeManagmentApis/node_modules/apollo-server/dist/index.js:76:28)
    at new Promise (<anonymous>)
    at ApolloServer.<anonymous> (/etc/graphQL/Samples/API-Wrapper/ApigeeManagmentApis/node_modules/apollo-server/dist/index.js:74:19)
    at Generator.next (<anonymous>)
    at /etc/graphQL/Samples/API-Wrapper/ApigeeManagmentApis/node_modules/apollo-server/dist/index.js:8:71
    at new Promise (<anonymous>)
    at __awaiter (/etc/graphQL/Samples/API-Wrapper/ApigeeManagmentApis/node_modules/apollo-server/dist/index.js:4:12)
Emitted 'error' event at:
    at Server.emit (events.js:198:13)
    at emitErrorNT (net.js:1307:8)
    at process._tickCallback (internal/process/next_tick.js:63:19)
    at Function.Module.runMain (internal/modules/cjs/loader.js:834:11)
    at startup (internal/bootstrap/node.js:283:19)
    at bootstrapNodeJSCore (internal/bootstrap/node.js:623:3)
graphql server For Apigee Management API's By Shawky Foda is ready at http://localhost:4000/
detail_name : {"baseURL":"https://apigee-prd-ms.moj.gov.sa:8443/v1","Authorization":"Basic YXBpZ2VlQG1vai5nb3Yuc2E6TW9qQHBybyMyMDE5","org_name":"moj-prod"}
